# mawk-snapshots

./: CHANGES  MANIFEST  Makefile.in  README  aclocal.m4  array.c  array.h  array.w  bi_funct.c  bi_funct.h  bi_vars.c  bi_vars.h  cast.c  code.c  code.h  config_h.in  configure  configure.in  da.c  error.c  execute.c  fcall.c  field.c  field.h  files.c  files.h  fin.c  fin.h  fpe_check.c  hash.c  init.c  init.h  jmp.c  jmp.h  kw.c  main.c  makebits.c  makedeps.sh  makescan.c  matherr.c  (+34 more)
examples/: ct_length.awk  decl.awk  deps.awk  eatc.awk  gdecl.awk  hcal  nocomment.awk  qsort.awk
man/: Makefile.in  TODO  mawk-arrays.7  mawk-code.7  mawk.1  mawk.doc  mawk.txt
msdos/: dosexec.c
package/: mawk.spec
package/debian/: changelog  control  copyright  postinst  preinst  rules  watch
package/freebsd/: Makefile
test/: bitand.out  bitbinarylogic.awk  bitcompl.out  bitlshift.out  bitor.out  bitrshift.out  bitshift.awk  bitunarylogic.awk  bitxor.out  cclass.awk  cclass.out  fpe_test  genbitout  hashbang-S.sh  interval0.awk  interval0.out  longline.out  longline.sh  mawkerrs  mawktest  mawktest.bat  nan-legacy.out  nan-posix.out  nan.awk  reg4.awk  repetitions.awk  repetitions.out  wfrq0.awk
